--- a/dspace-api/pom.xml
+++ b/dspace-api/pom.xml
@@ -337,8 +337,14 @@
 
         <dependency>
             <groupId>org.piwik.java.tracking</groupId>
-            <artifactId>matomo-java-tracker</artifactId>
-            <version>2.0</version>
+            <artifactId>matomo-java-tracker-java11</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.piwik.java.tracking</groupId>
+            <artifactId>matomo-java-tracker-servlet-javax</artifactId>
+            <version>3.0.2</version>
         </dependency>
 
         <dependency>
